# vGUPPI-visual

./: .gitignore  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: docling-expert.agent.md
.github/skills/initialize-project/: SKILL.md
.github/skills/skill-creator/scripts/: init_skill.py
02 scripts/: dashboard.py  vguppi.py
02 scripts/__marimo__/session/: vguppi.py.json
03 temp/: test_vguppi.py
04 output/: SVO Salop's vGUPPI Formulas 2025-12-17.xlsx
05 notes/: 20260211 vGUPPI formulae.md
