[project]
name = "vguppi-visual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "marimo[recommended]>=0.19.10",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
